# epidemic-simulation

./: CMakeLists.txt  README.md  epidemic-simulation  game.cpp  game.hpp  main.cpp  people.cpp  people.hpp  settings.hpp  statistics.py  statistics.txt  test.py
img/: infectious.png~
